# Minato-V5.5

./: README.md  pyproject.toml
pyrogram/methods/messages/: __init__.py  forward_message_with_buttons.py
telegramapi/: client.py  dispatcher.py  file_id.py  filters.py  qrlogin.py  sync.py  utils.py
telegramapi/connection/: connection.py
telegramapi/crypto/: aes.py  mtproto.py
telegramapi/enums/: auto_name.py  business_schedule.py  chat_action.py  chat_members_filter.py  gift_attribute_type.py  media_area_type.py  message_entity_type.py  messages_filter.py  next_code_type.py  paid_reaction_privacy.py  phone_call_discard_reason.py  privacy_key.py  privacy_rule_type.py  profile_tab.py  sent_code_type.py
telegramapi/errors/: rpc_error.py
telegramapi/handlers/: deleted_business_messages_handler.py  deleted_messages_handler.py  handler.py
telegramapi/methods/account/: add_profile_audio.py  get_account_ttl.py  get_global_privacy_settings.py  get_privacy.py  remove_profile_audio.py  set_account_ttl.py  set_global_privacy_settings.py  set_inactive_session_ttl.py  set_privacy.py  set_profile_audio_position.py
telegramapi/methods/advanced/: invoke.py  recover_gaps.py  resolve_peer.py  save_file.py
telegramapi/methods/auth/: accept_terms_of_service.py  check_password.py  connect.py  disconnect.py  get_active_sessions.py  get_password_hint.py  initialize.py  log_out.py  (+10 more)
telegramapi/parser/: html.py  markdown.py  parser.py
telegramapi/session/: auth.py  session.py
telegramapi/storage/: sqlite_storage.py  storage.py
telegramapi/types/: object.py  update.py
(+573 files in other folders)
