[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Kurigram"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "pyaes<=1.6.1",
    "pysocks<=1.7.1"
]
license = "LGPL-3.0-or-later"

[project.optional-dependencies]
dev = [
    "keyring<=25.1.0",
    "hatch<=1.7.0",
    "pytest<=7.4.3",
    "pytest-asyncio<=0.21.1",
    "pytest-cov<=4.1.0",
    "twine<=4.0.2",
]

docs = [
    "Sphinx<=8.2.3",
    "furo<=2025.7.19",
    "sphinx-autobuild<=2024.10.3",
    "sphinx-copybutton<=0.5.2",
    "pygments<=2.19.2",
]

fast = [
    "tgcrypto<=1.2.5",
    "uvloop<=0.21.0; sys_platform == 'darwin' or sys_platform == 'linux'",
]

[tool.hatch.version]
path = "pyrogram/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    "docs/",
    "tests/",
    ".gitignore",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["pyrogram"]
